multitenancy/mock-express-backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-api
  namespace: express-nodejs
spec: 
  replicas: 2
  selector: 
    matchLabels:
      app: express-api
      role: express-api
    template: 
      metadata: 
        labels: 
          app: express-api
          role: express-api
      spec:
        containers:
        - name: express-api
          image: lukondefmwila/express-test:latest
          resources:
            limits:
              memory: "128Mi" # these are the resource limits for memory and cpu
              cpu: "500m" 
          ports:
          - containerPort: 8080
