multitenancy/mock-express-backend/network-policy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-express-nodejs-traffic
  namespace: express-nodejs
spec: 
  podSelector:
    matchLabels:
      role: express-api
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          tier: expressBackend
        podSelector:
          matchLabels:
            role: express-api
